--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "myappp",
   "proxy": "https://jwellery-store-backend.onrender.com",
   "version": "0.1.0",
   "private": true,
